# Chatty

./: .gitignore  Makefile  format.sh  main
client/: .gitignore  CMakeLists.txt  Makefile  main
client/include/: display.h  net.h  protocol.h
client/scripts/: a.c  a.out  b.cpp  c.c  meaningless  meaningless.c  program
client/src/: display.c  formatPrint.c  fresh.cpp  init.c  inquire.cpp  main.c  net.c  receiveFile.c  shell.cpp
client/src/commands/: emroll.c  enroll.c  help.c  login.c  logout.c  send.c  sendFile.c  sendMsg.c  touch.c
include/: display.h  formatPrint.h
scripts/: meaningless
service/: Makefile  protocol.h  service.c
